log
Wed, Mar 19, 2025 11:29:31 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025 11:35:16 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
204486d
Wed, Mar 19, 2025 11:38:27 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
9d8ddf2
Wed, Mar 19, 2025 11:41:05 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|2
total_score: 40/70
b5cde6d
Wed, Mar 19, 2025 11:47:29 AM: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  4|1
total_score: 50/70
795c9d0
Wed, Mar 19, 2025 12:06:14 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:19: error: passing argument 1 of 'strcmp' makes pointer from integer without a cast [-Werror=int-conversion]
       if (!strcmp(cadena[i], cadena[k-1])) return 0 ;
                   ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
In file included from test.c:5:0:
exercises.c:125:30: error: passing argument 2 of 'strcmp' makes pointer from integer without a cast [-Werror=int-conversion]
       if (!strcmp(cadena[i], cadena[k-1])) return 0 ;
                              ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ac18f99
Wed, Mar 19, 2025 12:07:27 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
18b87a1
Thu, Mar 20, 2025  5:41:44 PM: 
 exercises.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:125:20: error: comparison between pointer and integer [-Werror]
    while(cadena[i] != NULL) {
                    ^~
exercises.c:126:23: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(stack_aux, cadena[i]) ;
                       ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:132:57: error: comparison between pointer and integer [-Werror]
       if (!(cadena[i] == '(' && (char *) top(stack_aux) == ')')) return 0 ;
                                                         ^~
exercises.c:133:24: error: passing argument 1 of 'strcmp' makes pointer from integer without a cast [-Werror=int-conversion]
       else if (!strcmp(cadena[i], (char *) (top(stack_aux)) - 2)) return 0 ;
                        ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
831fe7d
Thu, Mar 20, 2025  6:02:55 PM: 
 exercises.c | 20 ++++++++++++++------
 1 file changed, 14 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:127:23: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(stack_aux, cadena[i]) ;
                       ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
610df44
Thu, Mar 20, 2025  6:03:09 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
891adfd
Thu, Mar 20, 2025  6:04:08 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
d466613
Thu, Mar 20, 2025  6:04:39 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8b8535c
Thu, Mar 20, 2025  6:07:10 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
6d97d9c
Thu, Mar 20, 2025  6:08:21 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
8312071
Thu, Mar 20, 2025  6:09:04 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
c3728cb
